made lgo link to index.html

--- a/create_reservation.html
+++ b/create_reservation.html
@@ -8,13 +8,15 @@
   <title>Lab Reservation System</title>
   <link rel="stylesheet" href="css/main_style.css" />
   <link rel="stylesheet" href="css/index copy.css" />
-  <script src="js/script.js" defer></script>                                                                                                                                   
+  <script src="js/script.js" defer></script>
 
 </head>
 
 <body>
   <div class="title-color">
-    <img src="data/Logo.png">
+    <a href="index.html">
+      <img src="data/Logo.png" alt="LabRes Logo">
+    </a>
     <h2 id="title">LS Lab Reservations</h2>
   </div>
   <div class="links">
@@ -48,153 +50,153 @@
 
     <div class="table">
       <h2>Seat reservation</h2>
-      Date: <input type="date"> <br><br>    <!-- added breakline -->
+      Date: <input type="date"> <br><br> <!-- added breakline -->
       <label><input type="radio" name="lab" value="1" checked> Lab 1</label>
       <label><input type="radio" name="lab" value="2"> Lab 2</label>
       <label><input type="radio" name="lab" value="3"> Lab 3</label>
       <label><input type="radio" name="lab" value="4"> Lab 4</label>
       <label><input type="radio" name="lab" value="5"> Lab 5</label>
       <div class="box">
-          <div>
-            <div class="number">1</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">2</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">3</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">4</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">5</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">6</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">7</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">8</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">9</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">10</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">11</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">12</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">13</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">14</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">15</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">16</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">17</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">18</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">19</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">20</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">21</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">22</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">23</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">24</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">25</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">26</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">27</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">28</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">29</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">30</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">31</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">32</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">33</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">34</div>
-            <div class="name"></div>
-          </div>
-          <div>
-            <div class="number">35</div>
-            <div class="name"></div>
-          </div>
+        <div>
+          <div class="number">1</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">2</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">3</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">4</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">5</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">6</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">7</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">8</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">9</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">10</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">11</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">12</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">13</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">14</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">15</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">16</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">17</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">18</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">19</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">20</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">21</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">22</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">23</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">24</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">25</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">26</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">27</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">28</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">29</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">30</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">31</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">32</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">33</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">34</div>
+          <div class="name"></div>
+        </div>
+        <div>
+          <div class="number">35</div>
+          <div class="name"></div>
+        </div>
 
 
 
@@ -202,11 +204,11 @@
       </div>
 
       <div class="box-buttons">
-         <button id="Clear" type="button">Clear</button> 
-         <button id="reserve-button" type="button">Reserve</button> 
+        <button id="Clear" type="button">Clear</button>
+        <button id="reserve-button" type="button">Reserve</button>
       </div>
     </div>
-    
+
   </div>
 </body>
 
