--- a/search_profile.html
+++ b/search_profile.html
@@ -8,13 +8,15 @@
   <title>Lab Reservation System</title>
   <link rel="stylesheet" href="css/main_style.css" />
   <link rel="stylesheet" href="css/index copy.css" />
-  <script src="js/script.js" defer></script>                                                                                                                                   
+  <script src="js/script.js" defer></script>
 
 </head>
 
 <body>
   <div class="title-color">
-    <img src="data/Logo.png">
+    <a href="index.html">
+      <img src="data/Logo.png" alt="LabRes Logo">
+    </a>
     <h2 id="title">LS Lab Reservations</h2>
   </div>
   <div class="links">
@@ -50,8 +52,8 @@
       <h2>Edit Reservations here</h2>
     </div>
 
-    
-    
+
+
   </div>
 </body>
 
