--- a/profile.html
+++ b/profile.html
@@ -10,16 +10,20 @@
   <link rel="stylesheet" href="css/index copy.css" />
   <script src="js/script.js" defer></script>
 
-  <style>                                                                                           /* Include this in head of all html files */
-    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&display=swap');   /* Include this in head of all html files */
-  </style>                                                                                                                                    
+  <style>
+    /* Include this in head of all html files */
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&display=swap');
+    /* Include this in head of all html files */
+  </style>
 
 
 </head>
 
 <body>
   <div class="title-color">
-    <img src="data/Logo.png">
+    <a href="index.html">
+      <img src="data/Logo.png" alt="LabRes Logo">
+    </a>
     <h2 id="title">LS Lab Reservations</h2>
   </div>
   <div class="links">
@@ -55,8 +59,8 @@
       <h2>Profile here</h2>
     </div>
 
-    
-    
+
+
   </div>
 </body>
 
