--- a/view_reservation.html
+++ b/view_reservation.html
@@ -14,7 +14,9 @@
 
 <body>
   <div class="title-color">
-    <img src="data/Logo.png">
+    <a href="index.html">
+      <img src="data/Logo.png" alt="LabRes Logo">
+    </a>
     <h2 id="title">LS Lab Reservations</h2>
   </div>
   <div class="links">
@@ -50,8 +52,8 @@
       <h2>Welcome to the LabRes System!</h2>
     </div>
 
-    
-    
+
+
   </div>
 </body>
 
