Created profile page
Added the layout for profile page *not final for the view tab

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Lab Reservation System</title>
   <link rel="stylesheet" href="css/main_style.css" />
   <link rel="stylesheet" href="css/index copy.css" />
+  <link rel="stylesheet" href="css/home.css"
   <script src="js/script.js" defer></script>                                                                                                                                  
 
 </head>
