date always starts on current date and login changes to logout once logged in

--- a/create_reservation.html
+++ b/create_reservation.html
@@ -41,7 +41,7 @@
           <a href="search_profile.html">Search Profiles</a>
         </div>
         <div>
-          <a href="login.html">Login</a>
+           <a href="login.html" id="auth-link">Login</a>
         </div>
         <div>
           <a href="register.html">Register</a>
@@ -50,7 +50,7 @@
 
     <div class="table">
       <h2>Seat reservation</h2>
-      Date: <input type="date"> <br><br> <!-- added breakline -->
+      Date: <input type="date" id="reservation-date"> <br><br>
       <label><input type="radio" name="lab" value="1" checked> Lab 1</label>
       <label><input type="radio" name="lab" value="2"> Lab 2</label>
       <label><input type="radio" name="lab" value="3"> Lab 3</label>
