--- a/view_reservation.html
+++ b/view_reservation.html
@@ -41,7 +41,7 @@
           <a>Search Profiles</a>
         </div>
         <div>
-          <a href="login.html">Login</a>
+           <a href="login.html" id="auth-link">Login</a>
         </div>
         <div>
           <a href="register.html">Register</a>
