--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="search_profile.html">Search Profiles</a>
         </div>
         <div>
-          <a href="login.html">Login</a>
+           <a href="login.html" id="auth-link">Login</a>
         </div>
         <div>
           <a href="register.html">Register</a>
