just added 's' to title

--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
     <a href="index.html">
       <img src="data/Logo.png" alt="LabRes Logo">
     </a>
-    <h2 id="title">LS Lab Reservation</h2>
+    <h2 id="title">LS Lab Reservations</h2>
   </div>
   <div class="login-register">
     <div class="form-container">
