--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <a href="index.html">
       <img src="data/Logo.png" alt="LabRes Logo">
     </a>
-    <h2 id="title">LS Lab Reservation</h2>
+    <h2 id="title">LS Lab Reservations</h2>
   </div>
   <div class="login-register">
 
