--- a/view_reservation.html
+++ b/view_reservation.html
@@ -56,10 +56,28 @@
               <div class="pfp">
                 <img>
               </div>
+              <div class="reservation_description">
+                @PiiPoomade a reservation on June 17 2025 6:48 PM<br>
+                For Laboratory #5<br>
+                Reserving the computers 1,2,3<br>
+                On June 20, 2025 From 10:00 AM to 11:AM<br>
+              </div>
             </div>
             <div class="view_slide_bottom">
               <div class="box">
-
+                <p>Lab #5</p>
+                <div class="computer">
+                  <div class="number">1</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">2</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">3</div>
+                  <div class="name"></div>
+                </div>
               </div>
             </div>
           </div>
