Reservation Viewing is now alwrite

--- a/profile.html
+++ b/profile.html
@@ -66,62 +66,112 @@
           <h2>Reservations</h2>
         </div>
 
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div><div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
-        <div class="samplebox">
-            Temp record delete later
-        </div>
+        <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile.html">
+                  <div class="pfp_image">
+                    <p>@DumbName</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                You made a reservation<br>
+                on June 17 2025 6:48 PM For Laboratory #5<br>
+                Reserving the computers 1,2,3<br>
+                For June 20, 2025 From 10:00 AM to 11:00 AM<br>
+              </div>
+              <div class="reservation_options">
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div class="box">
+                <p>Lab #5 - June 20 - 10:00 to 11:00</p>
+                <div class="computer">
+                  <div class="number">1</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">2</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">3</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <span class="pending">PENDING</span>
+            </div>
+          </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile.html">
+                  <div class="pfp_image">
+                    <p>@DumbName</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                You made an anonymous reservation<br>
+                On June 17 2025 6:52 PM For Laboratory #5<br>
+                Reserving the computers 4<br>
+                For June 20, 2025 From 10:00 AM to 11:00 AM<br>
+              </div>
+              <div class="reservation_options">
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div class="box">
+                <p>Lab #5 - June 20 - 10:00 to 11:00</p>
+                <div class="computer">
+                  <div class="number">4</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <span class="approved">APPROVED</span>
+            </div>
+          </div>
+          
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile.html">
+                  <div class="pfp_image">
+                    <p>@DumbName</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                You made reservation<br>
+                On June 18 2025 6:48 AM For Laboratory #3<br>
+                Reserving the computers 6,9<br>
+                For June 20, 2025 From 9:00 AM to 4:00 PM<br>
+              </div>
+              <div class="reservation_options">
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div class="box">
+                <p>Lab #3 - June 20 - 09:00 to 16:00</p>
+                <div class="computer">
+                  <div class="number">6</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">9</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <span class="denied">DENIED</span>
+            </div>
+          </div>
+
+          
       </div>
     </div>
 
