--- a/view_reservation.html
+++ b/view_reservation.html
@@ -8,6 +8,7 @@
   <title>Lab Reservation System</title>
   <link rel="stylesheet" href="css/main_style.css" />
   <link rel="stylesheet" href="css/index copy.css" />
+  <link rel="stylesheet" href="css/box.css" />
 
 </head>
 
@@ -48,24 +49,30 @@
     </div>
 
     <div class="table">
-      <h2>Welcome to the LabRes System!</h2>
+      <h2>Hello Admins!<br>Viewing Reservations</h2>
       <div class="box" id="view_box">
 
           <div class="view_slide">
             <div class="view_slide_top">
-              <div class="pfp">
-                <img>
-              </div>
+                <a class="pfp" href="profile.html">
+                  <div class="pfp_image">
+                    <p>@PiiPoo</p>
+                  </div>
+                </a>
               <div class="reservation_description">
-                @PiiPoomade a reservation on June 17 2025 6:48 PM<br>
-                For Laboratory #5<br>
+                @PiiPoo made a reservation<br>
+                on June 17 2025 6:48 PM For Laboratory #5<br>
                 Reserving the computers 1,2,3<br>
-                On June 20, 2025 From 10:00 AM to 11:AM<br>
+                For June 20, 2025 From 10:00 AM to 11:00 AM<br>
+              </div>
+              <div class="reservation_options">
+                <img src="data/check.png">
+                <img src="data/cross.png">
               </div>
             </div>
             <div class="view_slide_bottom">
               <div class="box">
-                <p>Lab #5</p>
+                <p>Lab #5 - June 20 - 10:00 to 11:00</p>
                 <div class="computer">
                   <div class="number">1</div>
                   <div class="name"></div>
@@ -80,18 +87,194 @@
                 </div>
               </div>
             </div>
+            <div class="view_slide_bottom">
+              <span class="pending">PENDING</span>
+            </div>
           </div>
 
           <div class="view_slide">
             <div class="view_slide_top">
-              <div class="pfp">
-                <img>
+                <a class="pfp" href="profile.html">
+                  <div class="pfp_image">
+                    <p>@DumbName</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                @Anonymous made a reservation<br>
+                On June 17 2025 6:52 PM For Laboratory #5<br>
+                Reserving the computers 4<br>
+                For June 20, 2025 From 10:00 AM to 11:00 AM<br>
+              </div>
+              <div class="reservation_options">
+
               </div>
             </div>
             <div class="view_slide_bottom">
-              <div>
+              <div class="box">
+                <p>Lab #5 - June 20 - 10:00 to 11:00</p>
+                <div class="computer">
+                  <div class="number">4</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <span class="approved">APPROVED</span>
+            </div>
+          </div>
+          
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile.html">
+                  <div class="pfp_image">
+                    <p>@DumbName</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                @Someone made a reservationM<br>
+                On June 18 2025 6:48 AFor Laboratory #3<br>
+                Reserving the computers 6,9<br>
+                For June 20, 2025 From 9:00 AM to 4:00 PM<br>
+              </div>
+              <div class="reservation_options">
 
               </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div class="box">
+                <p>Lab #3 - June 20 - 09:00 to 16:00</p>
+                <div class="computer">
+                  <div class="number">6</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">9</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <span class="denied">DENIED</span>
+            </div>
+          </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile.html">
+                  <div class="pfp_image">
+                    <p>@DumbName</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                @PiiPoomade a reservation<br>
+                On June 17 2025 6:48 PMFor Laboratory #5<br>
+                Reserving the computers 1,2,3<br>
+                For June 20, 2025 From 10:00 AM to 11:00 AM<br>
+              </div>
+              <div class="reservation_options">
+                <img src="data/check.png">
+                <img src="data/cross.png">
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div class="box">
+                <p>Lab #5 - June 20 - 10:00 to 11:00</p>
+                <div class="computer">
+                  <div class="number">1</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">2</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">3</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <span class="pending">PENDING</span>
+            </div>
+          </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile.html">
+                  <div class="pfp_image">
+                    <p>@DumbName</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                @PiiPoomade a reservation<br>
+                On June 17 2025 6:48 PMFor Laboratory #5<br>
+                Reserving the computers 1,2,3<br>
+                For June 20, 2025 From 10:00 AM to 11:00 AM<br>
+              </div>
+              <div class="reservation_options">
+                <img src="data/check.png">
+                <img src="data/cross.png">
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div class="box">
+                <p>Lab #5 - June 20 - 10:00 to 11:00</p>
+                <div class="computer">
+                  <div class="number">1</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">2</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">3</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <span class="pending">PENDING</span>
+            </div>
+          </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile.html">
+                  <div class="pfp_image">
+                    <p>@DumbName</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                @PiiPoomade a reservation<br>
+                On June 17 2025 6:48 PM For Laboratory #5<br>
+                Reserving the computers 1,2,3<br>
+                For June 20, 2025 From 10:00 AM to 11:00 AM<br>
+              </div>
+              <div class="reservation_options">
+                <img src="data/check.png">
+                <img src="data/cross.png">
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div class="box">
+                <p>Lab #5 - June 20 - 10:00 to 11:00</p>
+                <div class="computer">
+                  <div class="number">1</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">2</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">3</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <span class="pending">PENDING</span>
             </div>
           </div>
 
