--- a/edit_reservation.html
+++ b/edit_reservation.html
@@ -8,6 +8,7 @@
   <title>Lab Reservation System</title>
   <link rel="stylesheet" href="css/main_style.css" />
   <link rel="stylesheet" href="css/index copy.css" />
+  <link rel="stylesheet" href="css/box.css" />
   <script src="js/script.js" defer></script>
 
 </head>
