Cleanup homepage so theres something there

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <a href="edit_reservation.html">Edit Reservations</a>
         </div>
         <div>
+          <a href="view_reservation.html">View Reservations</a>
+        </div>
+        <div>
           <a href="profile.html">View Profile</a>
         </div>
         <div>
@@ -52,6 +55,8 @@
         <!--Text is AI GENERATED-->
         In modern educational and institutional environments, efficient management of shared resources like computer laboratories is essential. With increasing demand for digital access and limited lab availability, manual reservation systems often lead to scheduling conflicts, underutilization, and administrative burdens. The Computer Laboratory Reservation System is designed to streamline the scheduling process by providing a centralized, user-friendly platform for students, faculty, and staff to book lab sessions in real time. This system aims to enhance operational efficiency, ensure fair access, and reduce double-bookings through automated scheduling, approval workflows, and usage tracking. By digitizing the reservation process, institutions can improve resource allocation, promote responsible usage, and support the seamless delivery of academic and professional activities.
       </p>
+
+      <img src="data/lab.jpg">
     </div>
 
 
