--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/main_style.css" />
   <link rel="stylesheet" href="css/index copy.css" />
   <link rel="stylesheet" href="css/profile.css" />
+  <link rel="stylesheet" href="css/box.css" />
   <script src="js/script.js" defer></script>
 
 </head>
