Cleaning up Nav

--- a/create_reservation.html
+++ b/create_reservation.html
@@ -26,11 +26,11 @@
         <div>
           <a href="index.html">Home</a>
         </div>
-        <div id="currentlyhere">
+        <div  id="currentlyhere">
           <a href="create_reservation.html">Create Reservation</a>
         </div>
         <div>
-          <a href="edit_reservation.html">Edit Reservations</a>
+          <a href="view_reservation.html">View Reservations</a>
         </div>
         <div>
           <a href="profile.html">View Profile</a>
@@ -39,10 +39,14 @@
           <a href="search_profile.html">Search Profiles</a>
         </div>
         <div>
-           <a href="login.html" id="auth-link">Login</a>
+          <a href="login.html" id="auth-link">Login</a>
         </div>
         <div>
           <a href="register.html">Register</a>
+        </div>
+        <div>
+          <a href="logout.html"">Logout</a>
+        </div>
       </nav>
     </div>
 
