--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
           <a href="create_reservation.html">Create Reservation</a>
         </div>
         <div>
-          <a href="edit_reservation.html">Edit Reservations</a>
-        </div>
-        <div>
           <a href="view_reservation.html">View Reservations</a>
         </div>
         <div>
@@ -46,6 +43,10 @@
         </div>
         <div>
           <a href="register.html">Register</a>
+        </div>
+        <div>
+          <a href="logout.html"">Logout</a>
+        </div>
       </nav>
     </div>
 
