--- a/view_reservation.html
+++ b/view_reservation.html
@@ -32,19 +32,20 @@
           <a href="view_reservation.html">View Reservations</a>
         </div>
         <div>
-          <a href="edit_reservation.html">Edit Reservations</a>
-        </div>
-        <div>
           <a href="profile.html">View Profile</a>
         </div>
         <div>
-          <a>Search Profiles</a>
+          <a href="search_profile.html">Search Profiles</a>
         </div>
         <div>
-           <a href="login.html" id="auth-link">Login</a>
+          <a href="login.html" id="auth-link">Login</a>
         </div>
         <div>
           <a href="register.html">Register</a>
+        </div>
+        <div>
+          <a href="logout.html"">Logout</a>
+        </div>
       </nav>
     </div>
 
@@ -66,6 +67,7 @@
                 For June 20, 2025 From 10:00 AM to 11:00 AM<br>
               </div>
               <div class="reservation_options">
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
                 <img src="data/check.png">
                 <img src="data/cross.png">
               </div>
@@ -106,7 +108,7 @@
                 For June 20, 2025 From 10:00 AM to 11:00 AM<br>
               </div>
               <div class="reservation_options">
-
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
               </div>
             </div>
             <div class="view_slide_bottom">
@@ -137,7 +139,7 @@
                 For June 20, 2025 From 9:00 AM to 4:00 PM<br>
               </div>
               <div class="reservation_options">
-
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
               </div>
             </div>
             <div class="view_slide_bottom">
@@ -172,6 +174,7 @@
                 For June 20, 2025 From 10:00 AM to 11:00 AM<br>
               </div>
               <div class="reservation_options">
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
                 <img src="data/check.png">
                 <img src="data/cross.png">
               </div>
@@ -212,6 +215,7 @@
                 For June 20, 2025 From 10:00 AM to 11:00 AM<br>
               </div>
               <div class="reservation_options">
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
                 <img src="data/check.png">
                 <img src="data/cross.png">
               </div>
@@ -252,6 +256,7 @@
                 For June 20, 2025 From 10:00 AM to 11:00 AM<br>
               </div>
               <div class="reservation_options">
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
                 <img src="data/check.png">
                 <img src="data/cross.png">
               </div>
