--- a/edit_reservation.html
+++ b/edit_reservation.html
@@ -23,14 +23,14 @@
   <div class="links">
     <div class="left-tab">
       <nav>
-        <div>
+        <div id="currentlyhere">
           <a href="index.html">Home</a>
         </div>
         <div>
           <a href="create_reservation.html">Create Reservation</a>
         </div>
-        <div id="currentlyhere">
-          <a href="edit_reservation.html">Edit Reservations</a>
+        <div>
+          <a href="view_reservation.html">View Reservations</a>
         </div>
         <div>
           <a href="profile.html">View Profile</a>
@@ -39,10 +39,14 @@
           <a href="search_profile.html">Search Profiles</a>
         </div>
         <div>
-           <a href="login.html" id="auth-link">Login</a>
+          <a href="login.html" id="auth-link">Login</a>
         </div>
         <div>
           <a href="register.html">Register</a>
+        </div>
+        <div>
+          <a href="logout.html"">Logout</a>
+        </div>
       </nav>
     </div>
 
